# hyde

./: Makefile  README.md  __init__.py  __main__.py  core.py  corpus.py  generate.py  llm.py  prompts.py  pyproject.toml  retriever.py
.github/workflows/: test.yml
tests/: test_core.py  test_corpus.py  test_generate.py  test_llm.py  test_prompts.py  test_retriever.py
