[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyde"
version = "0.1.0"
description = "HyDE (Gao et al., 2022): generate a hypothetical answer document, then retrieve real documents using it. From scratch, zero deps."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []   # zero third-party deps — pure stdlib + OpenAI-compatible HTTP

[project.scripts]
hyde = "hyde.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hyde*"]

[tool.setuptools.package-data]
hyde = ["py.typed"]
